# Renderer

./: .editorconfig  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  PathTracer.h  main.cpp
src/core/: common.cpp  common.h
src/mesh/: Mesh2Volume.h  MeshViewer.h  TriMesh.h  TriMeshLoader.cpp  TriMeshLoader.h
src/opengl-wrapper/: FrameBufferObject.h  Shader.h  Texture2D.h  Texture2DArray.h  Texture3D.h  VertexArrayObject.h  VertexArrayObjectForMesh.h  Window.h  XYZ_Axis.h
src/shaders/: render.frag  render.vert  texture_render.frag  texture_render.vert
